# benchmark-harness

./: .env.example  .gitignore  BUILD_LIBRARY.md  CONVENTIONS.md  EXTERNAL_DRIVE.md  README.md  ROADMAP.md  STORAGE_PLAN.md  UI_ROADMAP.md  local-code-benchmark.yaml  minimax-reap-coding-benchmark.yaml  pyproject.toml  qwen36-agent-safety.yaml  qwen36-coding-benchmark.yaml  qwen36-fast.yaml  qwen36-local-coding-agent.yaml  qwen36-public-baseline.yaml  qwen36-quantization-test.yaml  qwen36-smoke.yaml
configs/: datasets.yaml  judge_rubrics.yaml  models.yaml  scorers.yaml  suites.yaml
examples/: context-stress.yaml  library-usage.py
exports/: judge_pairwise.jsonl  judge_scores.jsonl  preference_chosen_rejected.jsonl  preference_pairwise.jsonl  sft_openai_messages.jsonl
milestones/: M11_M16.md  m01-project-bootstrap.md  m02-task-schema-registry.md  m03-timing-token-metrics.md  m04-basic-scorers.md  m05-coding-task-runner.md  m06-local-coding-agent-suite-v1.md  m06-local-coding-agent-suite.md  m07-llm-judge-integration.md  m08-prompt-style-comparison.md  m09-long-context-benchmark-suite.md  m09-long-context-benchmark.md  m10-quantization-comparison-suite.md  m10-quantization-comparison.md  m11-agent-safety-command-discipline.md  m12-report-generator-v2.md  m13-training-data-export.md  m14-dashboard-analysis-notebook.md  m15-ci-regression-mode.md  m17-package-and-storage-abstraction.md  m18-run-spec-and-result-schemas.md  m19-runner-interface-and-runtime-abstraction.md  m20-cli-refactor-and-storage-safety.md  m20-prompt-optimization.md  m21-artifact-registry-and-external-references.md  m22-tests-unit-integration-golden.md  m23-docs-examples-and-definition-of-done.md  m24-scorer-test-deep-dive.md  m25-report-generation-test-coverage.md
notebooks/: bench_dashboard.ipynb
scripts/: prepare_dataset.py  run_smoke.sh
tests/: conftest.py  test_artifact_fingerprint.py  test_artifact_modes.py  test_artifact_registry.py  test_cli_integration.py  test_code_task_runner.py  test_config.py  test_m15.py  (+44 more)
(+198 files in other folders)
