[project]
name = "bench-harness"
version = "0.1.0"
description = "Portable, library-grade LLM benchmark harness — storage, schemas, runners, and reports"
requires-python = ">=3.12"
dependencies = [
    "typer[all]",
    "rich",
    "pyyaml",
    "pydantic",
    "openai",
    "httpx",
    "sqlite-utils",
    "jsonschema",
    "jinja2",
    "unidiff",
    "tiktoken",
]

[project.optional-dependencies]
dev = [
    "ruff",
]
coding = [
    # bigcode-evaluation-hub, evalplus — heavier deps, install per-need
]
analysis = [
    "duckdb",
    "pandas",
    "matplotlib",
    "seaborn",
    "great-tables",
]
long-context = [
    "nvidia-ml-py",
    "transformers",
]
web = [
    "flask",
    "flask-cors",
]

[project.scripts]
bench-harness = "bench_harness.cli:main"
llm-bench = "bench_harness.cli:main"
bench-harness-web = "bench_harness.server.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src"]
line-length = 120
